Fix padding on mobile

--- a/sass/gutenberg/layout/_content.scss
+++ b/sass/gutenberg/layout/_content.scss
@@ -2,14 +2,14 @@
 .editor-styles-wrapper,
 .article-content {
   max-width: 100%;
-  padding-bottom: var(--padding-block);
   padding-left: 0;
   padding-right: 0;
-  padding-top: var(--padding-block);
+  padding-bottom: 3.2rem;
+  padding-top: 3.2rem;
 
-  @media (min-width: 1200px) {
-    padding-bottom: 3.2rem;
-    padding-top: 3.2rem;
+  @media (max-width: $container-mobile) {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
   }
 }
 
